force-app/main/default/objects/Account/fields/DIN__c.field-meta.xml
<CustomField>
    <fullName>DIN__c</fullName>
    <label>DIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>