force-app/main/default/objects/Account/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Living with Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>