force-app/main/default/objects/Account/fields/PAN_ID__c.field-meta.xml
<CustomField>
    <fullName>PAN_ID__c</fullName>
    <label>PAN ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>