force-app/main/default/objects/Account/fields/Senior_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Senior_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Citizen</label>
    <type>Checkbox</type>
</CustomField>