force-app/main/default/objects/Account/fields/Tax_Regime__c.field-meta.xml
<CustomField>
    <fullName>Tax_Regime__c</fullName>
    <label>Tax Regime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old Regime</fullName>
            </value>
            <value>
                <fullName>New Regime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>